--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -82,7 +82,6 @@ h2 {
 
 /*interactive feature to dropdown items*/
 .topnav a:hover, .dropdown:hover .dropbtn {
-    width: 100vw;
     background-color: rgb(2, 194, 62);
     color: rgb(255, 255, 255);
 }
@@ -101,7 +100,7 @@ h2 {
 /*navigation tablet size*/
 @media screen and (max-width: 50em) {
     .dropbtn .dropdown .dropdown-content {
-        width: 100%
+        width: 100%;
     }
 }
 
@@ -121,7 +120,7 @@ h2 {
 .topnav .dropbtn .dropdown {
     font-size: 0.8em;
     z-index: 99;
-    width: 100vw;
+    width: 100%;
     line-height: 1em;
     overflow: hidden;
     padding-bottom: 0.5em;
