--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -14,7 +14,7 @@ h2 {
 
 /*Navigation section*/
 .topnav {
-    line-height: 2em;  
+    line-height: 1.5em;  
     background-color: rgb(252, 214, 0, 0.664);
     overflow: hidden;
     z-index: 1;
@@ -61,6 +61,15 @@ h2 {
     background-color: inherit;
 }
 
+/*dropdown content in mobile*/
+@media screen and (max-width: 37.5em) {
+    .dropdown .dropbtn {
+    font-size: 2.1em;
+    color: rgb(2, 194, 62);
+    padding: 1em;
+    padding-right: 2.1em;
+    }
+}
 /*dropdown style*/
 .dropdown-content {
     display: none;
@@ -68,6 +77,7 @@ h2 {
     background-color: rgb(0,0,0,0.2);
     min-width: 20em;
     z-index: 1;
+    padding-bottom: 0.5em;
 }
 
 /*achor tags*/
@@ -97,36 +107,6 @@ h2 {
 .dropdown:hover .dropdown-content {
     display: block;
     z-index: 1;
-}
-
-/*navigation tablet size*/
-@media screen and (max-width: 50em) {
-    .dropbtn .dropdown .dropdown-content {
-        width: 100%;
-    }
-}
-
-/*navigation mobile size*/
-@media screen and (max-width: 37.5em) {
-.topnav .dropbtn .dropdown {
-    font-size: 0.8em;
-    z-index: 99;
-    width: 100%;
-    line-height: 1em;
-    overflow: hidden;
-    padding-bottom: 0.5em;
-    }
-}
-
-@media screen and (max-width: 26.25em) {
-.topnav .dropbtn .dropdown {
-    font-size: 0.8em;
-    z-index: 99;
-    width: 100%;
-    line-height: 1em;
-    overflow: hidden;
-    padding-bottom: 0.5em;
-    }
 }
 
 /*home banner*/
