--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -2,7 +2,7 @@
 @import url("https://fonts.googleapis.com/css?family=Roboto: 100,200,300,400,500,600,700|Exo: 100,200,300,400,500,600,700&display=swap");
 /*Find links to each individual site pages in README.md*/
 
-/*smooth site scroll*/
+/*smooth page scroll*/
 html {
     scroll-behavior: smooth;
 }
@@ -31,7 +31,7 @@ h2 {
     font-size: 2em;
 }
 
-/*highlight current page */
+/*highlight current page*/
 .active {
     background-color: rgb(2, 194, 62);
     color: rgb(255, 255, 255);
@@ -50,7 +50,7 @@ h2 {
     z-index: 1;
 }
 
-/*dropdown button to fit inside topnav */
+/*position& style dropdown button to fit inside topnav */
 .dropdown .dropbtn {
     font-size: 2em;
     border: none;
@@ -70,7 +70,8 @@ h2 {
     padding-right: 2.1em;
     }
 }
-/*dropdown style*/
+
+/*dropdown position& style*/
 .dropdown-content {
     display: none;
     position: relative;
@@ -80,7 +81,7 @@ h2 {
     padding-bottom: 0.5em;
 }
 
-/*achor tags*/
+/*dropdown styling& position*/
 .dropdown-content a {
     float: none;
     color: rgb(255, 255, 255);
@@ -127,7 +128,7 @@ h2 {
     animation-fill-mode: backwards;
 }
 
-/*smooth transitions*/
+/*smooth animation transition*/
 .banner-outer {
     width: 100%;
     height: 25em;
@@ -152,7 +153,7 @@ to{
     }
 }
 
-/*container*/
+/*container& smooth animation transition*/
 @media screen and (max-width: 64.375em) {
     .banner-outer {
         width: 100%;
@@ -167,7 +168,7 @@ to{
         height: 15em;
     }
 }
-/*container*/
+/*container& smooth animation transition*/
 @media screen and (max-width: 37.5em) {
     .banner-outer {
         width: 100%;
@@ -192,7 +193,7 @@ to{
     animation-fill-mode: backwards;
 }
 
-/*Ensure smooth banner transition*/
+/*smooth banner transition*/
 .cheddar-banner-outer {
     width: 100%;
     height: 25em;
@@ -217,7 +218,7 @@ to{
     }
 }
 
-/*container*/
+/*container& smooth animation transition*/
 @media screen and (max-width: 64.375em) {
     .cheddar-banner-outer {
         width: 100%;
@@ -233,7 +234,7 @@ to{
     }
 }
 
-/*container*/
+/*container smooth animation transition*/
 @media screen and (max-width: 37.5em) {
     .cheddar-banner-outer {
         width: 100%;
@@ -258,9 +259,10 @@ to{
     animation-fill-mode: backwards;
 }
 
+/*smooth animation transition*/
 .blagdon-banner-outer {
     width: 100%;
-    height: 30em;
+    height: 25em;
     overflow:hidden;
     position: relative;
 }
@@ -281,7 +283,8 @@ to{
         height: 18em;
     }
 }
-/*container*/
+
+/*container& smooth animation transition*/
 @media screen and (max-width: 64.375em) {
     .blagdon-banner {
         width: 100%;
@@ -297,7 +300,7 @@ to{
     }
 }
 
-/*container*/
+/*container& smooth animation transition*/
 @media screen and (max-width: 37.5em) {
     .blagdon-banner-outer {
         width: 100%;
@@ -305,7 +308,7 @@ to{
     }
 }
 
-/*staple banner*/
+/*staple hill banner*/
 .staple-banner {
     width: 100%;
     height: 25em;
@@ -322,6 +325,7 @@ to{
     animation-fill-mode: backwards;
 }
 
+/*smooth animation transition*/
 .staple-banner-outer {
     width: 100%;
     height: 25em;
@@ -346,7 +350,7 @@ to{
     }
 }
 
-/*container*/
+/*container& smooth animation transition*/
 @media screen and (max-width: 64.375em) {
     .staple-banner-outer {
         width: 100%;
@@ -362,7 +366,7 @@ to{
     }
 }
 
-/*container*/
+/*container& smooth animation transition*/
 @media screen and (max-width: 37.5em) {
     .staple-banner-outer {
         width: 100%;
@@ -387,6 +391,7 @@ to{
     animation-fill-mode: backwards;
 }
 
+/*smooth animation transition*/
 .exmoor-banner-outer {
     width: 100%;
     height: 25em;
@@ -411,7 +416,7 @@ to {
     }
 }
 
-/*container*/
+/*container& smooth animation transition*/
 @media screen and (max-width: 64.375em) {
     .exmoor-banner-outer {
         width: 100%;
@@ -427,7 +432,7 @@ to {
     }
 }
 
-/*container*/
+/*container& smooth animation transition*/
 @media screen and (max-width: 37.5em) {
     .exmoor-banner-outer {
         width: 100%;
@@ -452,6 +457,7 @@ to {
     animation-fill-mode: backwards;
 }
 
+/*smooth animation transition*/
 .coastal-banner-outer {
     width: 100%;
     height: 25em;
@@ -476,7 +482,7 @@ to{
     }
 }
 
-/*container*/
+/*container& smooth animation transition*/
 @media screen and (max-width: 64.375em) {
     .coastal-banner-outer {
         width: 100%;
@@ -492,7 +498,7 @@ to{
     }
 }
 
-/*container*/
+/*container& smooth animation transition*/
 @media screen and (max-width: 37.5em) {
     .coastal-banner-outer {
         width: 100%;
@@ -644,8 +650,8 @@ img {
     background-color: rgb(255, 255, 255);
     color:rgba(2, 1, 1, 0.904);
     box-shadow: 0.2em 0.2em rgb(2, 194, 62);
-    padding: 1em;
     font-size: 3em;
+    font-style: italic;
     border: none;
 }
 
@@ -653,7 +659,7 @@ img {
 .bottom-nav .dropup {
     position: relative;
     display: inline-block;
-    font-style: italic;
+    padding: 1em;
     padding-bottom: 3em;
 }
 
